force-app/main/default/objects/Marketing_Content__c/Marketing_Content__c.object-meta.xml
<CustomObject>
    <description>Tracks marketing content (Pinterest pins, Instagram posts, email headers) for journal products. Part of the Journal Business module.</description>
    <label>Marketing Content</label>
    <nameField>
        <displayFormat>MKTG-{00000}</displayFormat>
        <label>Content Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>