force-app/main/default/objects/Marketing_Content__c/fields/Clicks__c.field-meta.xml
<CustomField>
    <fullName>Clicks__c</fullName>
    <label>Clicks</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Total clicks from social media analytics</description>
</CustomField>