force-app/main/default/objects/Marketing_Content__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pinterest Pin</fullName>
            </value>
            <value>
                <fullName>Instagram Post</fullName>
            </value>
            <value>
                <fullName>Email Header</fullName>
            </value>
            <value>
                <fullName>Facebook Ad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of marketing content</description>
</CustomField>