force-app/main/default/objects/Marketing_Content__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image URL</label>
    <type>Url</type>
    <description>URL to Canva design or uploaded image</description>
</CustomField>