force-app/main/default/objects/Marketing_Content__c/fields/Impressions__c.field-meta.xml
<CustomField>
    <fullName>Impressions__c</fullName>
    <label>Impressions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Total impressions from Pinterest/Instagram analytics</description>
</CustomField>