force-app/main/default/objects/Marketing_Content__c/fields/Journal_Product__c.field-meta.xml
<CustomField>
    <fullName>Journal_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal Product</label>
    <referenceTo>Journal_Product__c</referenceTo>
    <relationshipLabel>Marketing Content</relationshipLabel>
    <relationshipName>Marketing_Content</relationshipName>
    <type>Lookup</type>
    <description>Link to journal product being marketed</description>
</CustomField>