force-app/main/default/objects/Marketing_Content__c/fields/Last_Analytics_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Analytics_Update__c</fullName>
    <label>Last Analytics Update</label>
    <type>DateTime</type>
    <description>Last time Pinterest analytics were synced</description>
</CustomField>