force-app/main/default/objects/Marketing_Content__c/fields/Pinterest_Board_ID__c.field-meta.xml
<CustomField>
    <fullName>Pinterest_Board_ID__c</fullName>
    <label>Pinterest Board ID</label>
    <length>100</length>
    <type>Text</type>
    <description>Pinterest Board ID where this Pin was posted</description>
</CustomField>