force-app/main/default/objects/Marketing_Content__c/fields/Pinterest_Post_ID__c.field-meta.xml
<CustomField>
    <fullName>Pinterest_Post_ID__c</fullName>
    <externalId>true</externalId>
    <label>Pinterest Post ID</label>
    <length>100</length>
    <type>Text</type>
    <description>ID from Pinterest API after posting (for analytics tracking)</description>
</CustomField>