force-app/main/default/objects/Marketing_Content__c/fields/Post_Text__c.field-meta.xml
<CustomField>
    <fullName>Post_Text__c</fullName>
    <label>Post Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Copy for social media post or email content</description>
</CustomField>