force-app/main/default/objects/Marketing_Content__c/fields/Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Posted_Date__c</fullName>
    <label>Posted Date</label>
    <type>DateTime</type>
    <description>Date/time content was posted to social media</description>
</CustomField>