force-app/main/default/objects/Marketing_Content__c/fields/Saves__c.field-meta.xml
<CustomField>
    <fullName>Saves__c</fullName>
    <label>Saves</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <description>Number of times the Pin was saved by Pinterest users</description>
</CustomField>